[gd_scene load_steps=21 format=2]

[ext_resource path="res://levels/Level5_2.tmx" type="PackedScene" id=1]
[ext_resource path="res://levels/LevelSetup.gd" type="Script" id=2]
[ext_resource path="res://levels/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/Fleaman.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/AxeKnight.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/RedSkeleton.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/Level5Block.tres" type="Texture" id=7]
[ext_resource path="res://items/MoneyBag.tscn" type="PackedScene" id=8]
[ext_resource path="res://items/HiddenTreasure.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/Level5_2.gd" type="Script" id=10]
[ext_resource path="res://levels/Destructible.tscn" type="PackedScene" id=11]
[ext_resource path="res://Teleport.tscn" type="PackedScene" id=12]
[ext_resource path="res://items/Sconce.tscn" type="PackedScene" id=13]
[ext_resource path="res://levels/Level5_3.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30, 2.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 2.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 111 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 111.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.25, 31.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 64, 74.5 )

[node name="Level5_2" type="Node2D"]
script = ExtResource( 10 )

[node name="LevelSetup" type="Node" parent="."]
script = ExtResource( 2 )
music = "res://music/06 Heart of Fire.mp3"
stage = 14
startFollowingSimon = false

[node name="Level5_2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -240 )

[node name="Door" parent="Level5_2" instance=ExtResource( 3 )]
position = Vector2( 0, 120 )
scale = Vector2( -1, 1 )
nextLevel = ExtResource( 14 )
nextLevelPosition = Vector2( -1024, -240 )

[node name="HiddenTreasure" parent="Level5_2" instance=ExtResource( 9 )]
position = Vector2( 879, 152 )

[node name="Treasure" parent="Level5_2/HiddenTreasure" instance=ExtResource( 8 )]
points = 1000
type = 3
autostartTtl = false

[node name="Mask" type="Sprite" parent="Level5_2/HiddenTreasure"]
position = Vector2( -7, 0 )
texture = ExtResource( 7 )

[node name="Mask2" type="Sprite" parent="Level5_2/HiddenTreasure"]
position = Vector2( 9, 0 )
texture = ExtResource( 7 )

[node name="SecretSpawner" type="Area2D" parent="Level5_2"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level5_2/SecretSpawner"]
position = Vector2( 976, 141.5 )
shape = SubResource( 4 )

[node name="SecretSpawnTimer" type="Timer" parent="Level5_2/SecretSpawner"]
wait_time = 3.5
one_shot = true

[node name="HiddenTreasure2" parent="Level5_2" instance=ExtResource( 9 )]
position = Vector2( 376, 152 )

[node name="Treasure" parent="Level5_2/HiddenTreasure2" instance=ExtResource( 8 )]
points = 1000
type = 3
autostartTtl = false

[node name="Mask" type="Sprite" parent="Level5_2/HiddenTreasure2"]
texture = ExtResource( 7 )

[node name="SecretSpawner2" type="Area2D" parent="Level5_2"]
position = Vector2( -675, 0 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level5_2/SecretSpawner2"]
position = Vector2( 962, 141.5 )
shape = SubResource( 5 )

[node name="SecretSpawnTimer2" type="Timer" parent="Level5_2/SecretSpawner2"]
wait_time = 3.5
one_shot = true

[node name="HiddenTreasure3" parent="Level5_2" instance=ExtResource( 9 )]
position = Vector2( 543, 152 )

[node name="Treasure" parent="Level5_2/HiddenTreasure3" instance=ExtResource( 8 )]
points = 1000
type = 3
autostartTtl = false

[node name="Mask" type="Sprite" parent="Level5_2/HiddenTreasure3"]
position = Vector2( -7, 0 )
texture = ExtResource( 7 )

[node name="Mask2" type="Sprite" parent="Level5_2/HiddenTreasure3"]
position = Vector2( 9, 0 )
texture = ExtResource( 7 )

[node name="SecretSpawner3" type="Area2D" parent="Level5_2"]
position = Vector2( -418, -64 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level5_2/SecretSpawner3"]
position = Vector2( 962, 141.5 )
shape = SubResource( 5 )

[node name="Sconces" type="Node2D" parent="Level5_2"]

[node name="Sconce" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 95, 336 )

[node name="Sconce2" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 162, 268 )

[node name="Sconce3" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 1230, 96 )

[node name="Sconce4" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 1107, 96 )

[node name="Sconce5" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 1170, 31 )

[node name="Sconce6" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 1039, 31 )

[node name="Sconce7" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 976, 31 )

[node name="Sconce8" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 849, 31 )

[node name="Sconce12" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 720, 31 )

[node name="Sconce13" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 656, 31 )

[node name="Sconce18" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 144, 31 )

[node name="Sconce20" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 79, 31 )

[node name="Sconce21" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 19, 96 )

[node name="Sconce14" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 593, 130 )

[node name="Sconce15" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 528, 130 )

[node name="Sconce9" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 915, 96 )

[node name="Sconce10" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 784, 96 )

[node name="Sconce11" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 464, 96 )

[node name="Sconce16" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 400, 96 )

[node name="Sconce17" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 336, 96 )

[node name="Sconce19" parent="Level5_2/Sconces" instance=ExtResource( 13 )]
position = Vector2( 208, 96 )
drop = "bigHeart"

[node name="Destructible" parent="Level5_2" instance=ExtResource( 11 )]
position = Vector2( 760, 24 )
texture = ExtResource( 7 )

[node name="Destructible2" parent="Level5_2" instance=ExtResource( 11 )]
position = Vector2( 760, 40 )
drop = "doubleortriple"
texture = ExtResource( 7 )

[node name="Enemies" type="Node2D" parent="Level5_2"]

[node name="AxeKnight" parent="Level5_2/Enemies" instance=ExtResource( 5 )]
position = Vector2( 69, 272 )

[node name="AxeKnight2" parent="Level5_2/Enemies" instance=ExtResource( 5 )]
position = Vector2( 121, 368 )

[node name="Fleaman" parent="Level5_2/Enemies" instance=ExtResource( 4 )]
position = Vector2( 225, 377 )

[node name="RedSkeleton" parent="Level5_2/Enemies" instance=ExtResource( 6 )]
position = Vector2( 1105, 32 )
startDown = true

[node name="RedSkeleton2" parent="Level5_2/Enemies" instance=ExtResource( 6 )]
position = Vector2( 913, 32 )
startDown = true

[node name="RedSkeleton3" parent="Level5_2/Enemies" instance=ExtResource( 6 )]
position = Vector2( 657, 128 )
startDown = true

[node name="RedSkeleton4" parent="Level5_2/Enemies" instance=ExtResource( 6 )]
position = Vector2( 399, 128 )
startDown = true

[node name="RedSkeleton5" parent="Level5_2/Enemies" instance=ExtResource( 6 )]
position = Vector2( 143, 128 )
startDown = true

[node name="AxeKnight3" parent="Level5_2/Enemies" instance=ExtResource( 5 )]
position = Vector2( 710, 128 )
direction = -1

[node name="AxeKnight4" parent="Level5_2/Enemies" instance=ExtResource( 5 )]
position = Vector2( 184, 32 )
direction = -1

[node name="OutsideBorder" type="StaticBody2D" parent="."]
position = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( -11, 49 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( 266, 48.5 )
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( 1273, -202 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( 766.25, -271.5 )
shape = SubResource( 3 )

[node name="SimonSpawn" type="Position2D" parent="."]
position = Vector2( 46, 144 )

[node name="GoDown1" parent="." instance=ExtResource( 12 )]
position = Vector2( 1063, -56 )
destinationNode = NodePath("../GoUp1")

[node name="GoUp1" parent="." instance=ExtResource( 12 )]
position = Vector2( 88, -7 )
destinationNode = NodePath("../GoDown1")
newCameraY = -176
direction = 1

[node name="FollowArea" type="Area2D" parent="."]
position = Vector2( -2, 282 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
position = Vector2( 194, -207.5 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Level5_2/SecretSpawner" to="." method="_on_SecretSpawner_body_entered"]
[connection signal="body_exited" from="Level5_2/SecretSpawner" to="." method="_on_SecretSpawner_body_exited"]
[connection signal="timeout" from="Level5_2/SecretSpawner/SecretSpawnTimer" to="." method="_on_SecretSpawnTimer_timeout" flags=6]
[connection signal="body_entered" from="Level5_2/SecretSpawner2" to="." method="_on_SecretSpawner2_body_entered"]
[connection signal="body_exited" from="Level5_2/SecretSpawner2" to="." method="_on_SecretSpawner2_body_exited"]
[connection signal="timeout" from="Level5_2/SecretSpawner2/SecretSpawnTimer2" to="." method="_on_SecretSpawnTimer2_timeout" flags=6]
[connection signal="teleported" from="GoDown1" to="." method="_on_GoDown1_teleported"]
[connection signal="teleported" from="GoUp1" to="." method="_on_GoUp1_teleported"]
[connection signal="body_entered" from="FollowArea" to="." method="_on_FollowArea_body_entered"]
[connection signal="body_exited" from="FollowArea" to="." method="_on_FollowArea_body_exited"]
